# sttk

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  start-notebook.sh
.github/workflows/: ci_website.yml
architecture/core-idea/: index.html
architecture/intro-eventdriven/: index.html
devscripts/: multiarch-build.sh  start-notebook.sh
docs/: index.md
docs/architecture/: intro-eventdriven.md
docs/css/: extra.css
docs/documentation/: intro_backbone.md  ontology-of-event-types.md
documentation/documentation/: index.html
documentation/intro_backbone/: index.html
documentation/notes/: index.html
documentation/ontology-of-event-types/: index.html
docwebsite/docs/: index.md
notebooks/: helloworld_test.ipynb
search/: search_index.json
sttk/: helloworld.py  histdatahandler.py  plotting.py  test_notebook.ipynb
