[tool.poetry]
name = "sttk"
version = "0.1.0"
description = ""
authors = ["Nils P. Kujath <63961429+NilsKujath@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
pandas = "^2.2.2"
matplotlib = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
