[tool.poetry]
name = "sttk"
version = "0.1.0"
description = ""
authors = ["Nils P. Kujath <63961429+NilsKujath@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
notebook = "^7.2.1"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^24.4.2"}
flake8 = "^7.1.0"
pre-commit = "^3.7.1"
nbqa = "^1.8.5"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.30"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
